lib/kube/frontend/shared/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $KUBE_APP-deployment
  namespace: $KUBE_NS
  labels:
    app: $KUBE_APP
    version: $GITHUB_SHA
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $KUBE_APP
  template:
    metadata:
      labels:
        app: $KUBE_APP
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: $KUBE_APP
          image: $KUBE_DEPLOYMENT_IMAGE
          imagePullPolicy: Always
          command: [ 'yarn', 'serve' ]
          args: [ '--host', '0.0.0.0', '--port', '9000' ]
          ports:
            - containerPort: 9000
          startupProbe:
            httpGet:
              path: /
              port: 9000
            # keeping the threshold settings according to time taken by data initializer to complete
            # if it's too low, continued failures will cause the pod to restart thus killing the init process
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 60
